Fix horiz scrollbar on project page when fixed kicks in

--- a/server/css/project.less
+++ b/server/css/project.less
@@ -233,4 +233,10 @@
 	z-index: 1000;
 	#gradient > .vertical-three-colors(white, white, 70%, rgba(255,255,255,0));
 	background-color: initial; // override mixin's value
+
+	#messageInput {
+		width: @gridRowWidth;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
